# freezer

./: .editorconfig  .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  authorization.c  debug.c  freezer.h  header.c  main.c  request.c  upload.c  utils.c
